2001-07-16  Don Porter  <dgp@users.sourceforge.net>

	BRANCH dgp-privates-into-namespace:
	* ChangeLog:
	* README:
	* deleted_files/xlib/ximage.c:
	* doc/TkInitStubs.3:
	* doc/canvas.n:
	* doc/clipboard.n:
	* doc/colors.n:
	* doc/console.n:
	* doc/image.n:
	* doc/menubutton.n:
	* doc/selection.n:
	* generic/tk.h:
	* generic/tkBind.c:
	* generic/tkCanvArc.c:
	* generic/tkCanvBmap.c:
	* generic/tkCanvLine.c:
	* generic/tkCanvPoly.c:
	* generic/tkCanvText.c:
	* generic/tkCanvWind.c:
	* generic/tkCanvas.c:
	* generic/tkEntry.c:
	* generic/tkFrame.c:
	* generic/tkImage.c:
	* generic/tkImgBmap.c:
	* generic/tkImgGIF.c:
	* generic/tkImgPhoto.c:
	* generic/tkInt.h:
	* generic/tkListbox.c:
	* generic/tkMenu.c:
	* generic/tkMenubutton.c:
	* generic/tkMenubutton.h:
	* generic/tkObj.c:
	* generic/tkRectOval.c:
	* generic/tkSelect.c:
	* generic/tkStubLib.c:
	* generic/tkWindow.c:
	* library/bgerror.tcl:
	* library/clrpick.tcl:
	* library/console.tcl:
	* library/entry.tcl:
	* library/msgbox.tcl:
	* library/spinbox.tcl:
	* library/text.tcl:
	* library/tk.tcl:
	* library/tkfbox.tcl:
	* library/xmfbox.tcl:
	* library/demos/arrow.tcl:
	* library/demos/clrpick.tcl:
	* library/demos/cscroll.tcl:
	* library/demos/ctext.tcl:
	* library/demos/filebox.tcl:
	* library/demos/floor.tcl:
	* library/demos/hscale.tcl:
	* library/demos/items.tcl:
	* library/demos/plot.tcl:
	* library/demos/puzzle.tcl:
	* library/demos/ruler.tcl:
	* library/demos/twind.tcl:
	* library/demos/vscale.tcl:
	* library/msgs/de.msg:
	* mac/README:
	* mac/tkMacMenubutton.c:
	* tests/bind.test:
	* tests/canvas.test:
	* tests/cursor.test:
	* tests/entry.test:
	* tests/event.test:
	* tests/focus.test:
	* tests/frame.test:
	* tests/listbox.test:
	* tests/macEmbed.test:
	* tests/macMenu.test:
	* tests/menu.test:
	* tests/menubut.test:
	* tests/safe.test:
	* tests/select.test:
	* tests/unixEmbed.test:
	* tests/unixWm.test:
	* tests/winClipboard.test:
	* tests/winDialog.test:
	* unix/Makefile.in:
	* unix/README: