@@ -3,7 +3,7 @@
 # Commands provided by Tk without official support.  Use them at your
 # own risk.  They may change or go away without notice.
 #
-# RCS: @(#) $Id: unsupported.tcl,v 1.1.2.2 2001/03/09 00:00:50 dgp Exp $
+# RCS: @(#) $Id: unsupported.tcl,v 1.1.2.3 2001/07/17 00:21:37 dgp Exp $
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
@@ -229,7 +229,7 @@ namespace eval ::tk::unsupported {
 
     variable PrivateVariables
     array set PrivateVariables {
-	histNum			::tk::histNum
+	histNum			::tk::HistNum
 	tkFocusIn		::tk::FocusIn
 	tkFocusOut		::tk::FocusOut
 	tkPalette		::tk::Palette
